--- a/pages/donate.html
+++ b/pages/donate.html
@@ -1,111 +1,121 @@
 <!DOCTYPE html>
 <html lang="es">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="shortcut icon" href="./assets/img/favicon.png" type="image/x-icon">
-        <link rel="stylesheet" href="../css/styles.css">
-        <title>Refugio de animales</title>
-    </head>
 
-    <body>
-        <header>
-            <nav class="navBar">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="./assets/img/favicon.png" type="image/x-icon">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"  rel="stylesheet"integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="../css/styles.css">
+    <title>Refugio de animales</title>
+</head>
+
+<body>
+    <header>
+        <nav class="menuContainer navbar navbar-expand-lg navbar-light">
+            <div class="container-fluid">
                 <div class="logo">
                     <img src="../assets/img/pata.png" alt="Logo">
                 </div>
-
-                <ul class="menuContainer">
-                    <li><a href="../index.html">Inicio</a></li>
-                    <li><a href="location.html">Refugios</a></li>
-                    <li><a href="donate.html">Dona</a></li>
-                    <li><a href="contact.html">Contactanos</a></li>
-                    <li><a href="shop.html">Shopping</a></li>
-                </ul>
-            </nav>
-            <nav  class="navBar-mobile">
-                <div class="menu-hamburguesa">
-                    <img src="../assets/img/menu.png"/>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="location.html">Refugios</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="donate.html">Dona</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="contact.html">Contactanos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="shop.html">Shopping</a>
+                        </li>
+                    </ul>
                 </div>
-                <div class="logo">
-                    <img src="../assets/img/pata.png" alt="Logo">
-                </div>
+            </div>
+        </nav>
+    </header>
 
-                <ul class="menuContainer" style="display: none;">
-                    <li><a href="../index.html">Inicio</a></li>
-                    <li><a href="location.html">Refugios</a></li>
-                    <li><a href="donate.html">Dona</a></li>
-                    <li><a href="contact.html">Contactanos</a></li>
-                    <li><a href="shop.html">Shopping</a></li>
-                </ul>
-            </nav>
-        </header>
-
-        <section class="donar">
-            <h1>Refugios de animales</h1>
-            <div>
-                <p>Ayuda donando</p>
-                <div class="container-cards">
-                    <div class="cards">
-                        <p class="left">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia dolorem itaque dolores 
-                            tenetur nulla a sapiente nesciunt.
-                        </p>
-                        <div class="botton-left">
-                            <button class="left">Enviar</button>
-                        </div>
-                        
-                    </div>
-                    <div class="cards">
-                        <p class="right">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia dolorem itaque dolores 
-                            tenetur nulla a sapiente nesciunt.
-                        </p>
-                        <div class="botton-right">
-                            <button class="right">Enviar</button>
-                        </div> 
-                    </div>
-                    <div class="cards">
-                        <p class="left">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia dolorem itaque dolores 
-                            tenetur nulla a sapiente nesciunt.
-                        </p>
-                        <div class="botton-left">
-                            <button class="left">Enviar</button>
-                        </div>
-                    </div>
-                    <div class="cards">
-                        <p class="right">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia dolorem itaque dolores 
-                            tenetur nulla a sapiente nesciunt.
-                        </p>
-                        <div class="botton-right">
-                            <button class="right">Enviar</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="text">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure nemo, quo officia amet quaerat
-                        quasi error iusto quis a architecto, obcaecati tempora ex voluptatem nihil molestias laudantium
-                        assumenda! Commodi, quidem!
+    <section class="donar">
+        <h1>Refugios de animales</h1>
+        <div>
+            <p>Ayuda donando</p>
+            <div class="container-cards">
+                <div class="cards">
+                    <p class="left">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia dolorem itaque dolores
+                        tenetur nulla a sapiente nesciunt.
                     </p>
+                    <div class="botton-left">
+                        <button class="left">Enviar</button>
+                    </div>
+
+                </div>
+                <div class="cards">
+                    <p class="right">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia dolorem itaque
+                        dolores
+                        tenetur nulla a sapiente nesciunt.
+                    </p>
+                    <div class="botton-right">
+                        <button class="right">Enviar</button>
+                    </div>
+                </div>
+                <div class="cards">
+                    <p class="left">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia dolorem itaque dolores
+                        tenetur nulla a sapiente nesciunt.
+                    </p>
+                    <div class="botton-left">
+                        <button class="left">Enviar</button>
+                    </div>
+                </div>
+                <div class="cards">
+                    <p class="right">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia dolorem itaque
+                        dolores
+                        tenetur nulla a sapiente nesciunt.
+                    </p>
+                    <div class="botton-right">
+                        <button class="right">Enviar</button>
+                    </div>
                 </div>
             </div>
-        </section>
+            <div class="text">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure nemo, quo officia amet quaerat
+                    quasi error iusto quis a architecto, obcaecati tempora ex voluptatem nihil molestias laudantium
+                    assumenda! Commodi, quidem!
+                </p>
+            </div>
+        </div>
+    </section>
 
-        <footer>
-            <div class="redes">
-                <div id="instagram">
-                    <img src="../assets/img/instagram.png" alt="instagram">
-                   </div>
-               <div id="facebook">
-                   <img src="../assets/img/facebook.png" alt="facebook">
-               </div>
-               <div id="youtube">
+    <footer>
+        <div class="redes">
+            <div id="instagram">
+                <img src="../assets/img/instagram.png" alt="instagram">
+            </div>
+            <div id="facebook">
+                <img src="../assets/img/facebook.png" alt="facebook">
+            </div>
+            <div id="youtube">
                 <img src="../assets/img/youtube.png" alt="youtube">
-               </div>
             </div>
+        </div>
 
-            <div class="copy">
-                <p>&copy; All Rights Reserved.</p>
-            </div>
-        </footer>
-    </body>
+        <div class="copy">
+            <p>&copy; All Rights Reserved.</p>
+        </div>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
+</body>
+
 </html>
