--- a/pages/location.html
+++ b/pages/location.html
@@ -5,40 +5,43 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="shortcut icon" href="./assets/img/favicon.png" type="image/x-icon">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"  rel="stylesheet"integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <link rel="stylesheet" href="../css/styles.css">
         <title>Ubicaciones</title>
     </head>
 
     <body>
         <header>
-            <nav class="navBar">
-                <div class="logo">
-                    <img src="../assets/img/pata.png" alt="Logo">
+            <nav class="menuContainer navbar navbar-expand-lg navbar-light">
+                <div class="container-fluid">
+                    <div class="logo">
+                        <img src="../assets/img/pata.png" alt="Logo">
+                    </div>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
+                        aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="location.html">Refugios</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="donate.html">Dona</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="contact.html">Contactanos</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="shop.html">Shopping</a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
-
-                <ul class="menuContainer">
-                    <li><a href="../index.html">Inicio</a></li>
-                    <li><a href="location.html">Refugios</a></li>
-                    <li><a href="donate.html">Dona</a></li>
-                    <li><a href="contact.html">Contactanos</a></li>
-                    <li><a href="shop.html">Shopping</a></li>
-                </ul>
-            </nav>
-            <nav  class="navBar-mobile">
-                <div class="menu-hamburguesa">
-                    <img src="../assets/img/menu.png"/>
-                </div>
-                <div class="logo">
-                    <img src="../assets/img/pata.png" alt="Logo">
-                </div>
-
-                <ul class="menuContainer" style="display: none;">
-                    <li><a href="../index.html">Inicio</a></li>
-                    <li><a href="location.html">Refugios</a></li>
-                    <li><a href="donate.html">Dona</a></li>
-                    <li><a href="contact.html">Contactanos</a></li>
-                    <li><a href="shop.html">Shopping</a></li>
-                </ul>
             </nav>
         </header>
 
@@ -68,5 +71,8 @@
                 <p>&copy; All Rights Reserved.</p>
             </div>
         </footer>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
     </body>
 </html>
