--- a/index.html
+++ b/index.html
@@ -51,7 +51,32 @@
             <h1>Refugios de animales</h1>
             <div class="containerUno col-md-12 col-xs-6">
                 <div class="conteiner-img">
-                    <img src="./assets/img/perro-1.jpg" alt="banner-home">
+                    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+                        <div class="carousel-indicators">
+                          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                        </div>
+                        <div class="carousel-inner">
+                          <div class="carousel-item active">
+                            <img src="./assets/img/perro-1.jpg" alt="banner-home">
+                          </div>
+                          <div class="carousel-item">
+                            <img src="./assets/img/perro-2.jpg" alt="banner-home">
+                          </div>
+                          <div class="carousel-item">
+                            <img src="./assets/img/perro-3.jpg" alt="banner-home">
+                          </div>
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+                          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                          <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+                          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                          <span class="visually-hidden">Next</span>
+                        </button>
+                      </div>
                 </div>
                 <div class="conteiner-text">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia dolorem itaque dolores 
