--- a/pages/location.html
+++ b/pages/location.html
@@ -7,6 +7,7 @@
         <link rel="shortcut icon" href="./assets/img/favicon.png" type="image/x-icon">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"  rel="stylesheet"integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <link rel="stylesheet" href="../css/styles.css">
+        <link rel="stylesheet" href="../css/maincss.css">
         <title>Refugio de animales</title>
     </head>
 
@@ -47,7 +48,7 @@
 
         <section class="ubicacion">
             <h1>Refugios de animales</h1>
-            <h1>Encontra el refugio mas cercano</h1>
+            <h2>Encontra el refugio mas cercano</h2>
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d105073.26483331798!2d-58.50333794279037!3d-34.61580373640571!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcca3b4ef90cbd%3A0xa0b3812e88e88e87!2sBuenos%20Aires%2C%20CABA!5e0!3m2!1ses!2sar!4v1636314639090!5m2!1ses!2sar" height="800" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. In voluptatibus accusantium eligendi tenetur nam, suscipit dolores, quos amet reiciendis, recusandae esse? Molestiae rem eligendi cupiditate incidunt, voluptatem vel id nam.
