--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="shortcut icon" href="./assets/img/favicon.png" type="image/x-icon">
+        <meta name="description" content="Encontra el refugio de animales mas cercano" />
+        <meta name="keywords" content="refugio, perro, gato, animales, mascotas, adoptar, transito" />
+        <meta name="author" content="Nancy Furyk">
+        <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
         <!-- CSS only -->
-        <link rel="stylesheet" href="css/styles.css">
         <link rel="stylesheet" href="css/maincss.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         
@@ -31,16 +33,16 @@
                                 <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="./pages/location.html">Refugios</a>
+                                <a class="nav-link" href="pages/location.html">Refugios</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="./pages/donate.html">Dona</a>
+                                <a class="nav-link" href="pages/donate.html">Dona</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="./pages/contact.html">Contactanos</a>
+                                <a class="nav-link" href="pages/contact.html">Contactanos</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="./pages/shop.html">Shopping</a>
+                                <a class="nav-link" href="pages/shop.html">Shopping</a>
                             </li>
                         </ul>
                     </div>
@@ -60,13 +62,13 @@
                         </div>
                         <div class="carousel-inner">
                           <div class="carousel-item active">
-                            <img src="./assets/img/perro-1.jpg" alt="banner-home">
+                            <img src="assets/img/perro-1.jpg" alt="banner-home">
                           </div>
                           <div class="carousel-item">
-                            <img src="./assets/img/perro-2.jpg" alt="banner-home">
+                            <img src="assets/img/perro-2.jpg" alt="banner-home">
                           </div>
                           <div class="carousel-item">
-                            <img src="./assets/img/perro-3.jpg" alt="banner-home">
+                            <img src="assets/img/perro-3.jpg" alt="banner-home">
                           </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
@@ -113,14 +115,14 @@
 
         <footer>
             <div class="redes">
-                <div id="instagram">
-                    <img src="./assets/img/instagram.png" alt="instagram">
-                   </div>
-               <div id="facebook">
-                   <img src="./assets/img/facebook.png" alt="facebook">
+                <div id="instagram" class="icon-instagram">
+                    <img src="assets/img/instagram.png" alt="instagram">
+                </div>
+               <div id="facebook"  class="icon-facebook">
+                   <img src="assets/img/facebook.png" alt="facebook">
                </div>
-               <div id="youtube">
-                <img src="./assets/img/youtube.png" alt="youtube">
+               <div id="youtube"  class="icon-youtube">
+                <img src="assets/img/youtube.png" alt="youtube">
                </div>
             </div>
 
