--- a/pages/contact.html
+++ b/pages/contact.html
@@ -5,9 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="./assets/img/favicon.png" type="image/x-icon">
+    <meta name="description" content="Encontra el refugio de animales mas cercano" />
+    <meta name="keywords" content="refugio, perro, gato, animales, mascotas, adoptar, transito" />
+    <meta name="author" content="Nancy Furyk">
+    <link rel="shortcut icon" href="../assets/img/favicon.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"  rel="stylesheet"integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="../css/maincss.css">
     <title>Refugio de animales</title>
 </head>
@@ -93,13 +95,13 @@
 
     <footer>
         <div class="redes">
-            <div id="instagram">
+            <div id="instagram" class="icon-instagram">
                 <img src="../assets/img/instagram.png" alt="instagram">
             </div>
-            <div id="facebook">
+            <div id="facebook" class="icon-facebook">
                 <img src="../assets/img/facebook.png" alt="facebook">
             </div>
-            <div id="youtube">
+            <div id="youtube" class="icon-youtube">
                 <img src="../assets/img/youtube.png" alt="youtube">
             </div>
         </div>
