--- a/pages/shop.html
+++ b/pages/shop.html
@@ -4,8 +4,8 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="Encontra el refugio de animales mas cercano" />
-        <meta name="keywords" content="refugio, perro, gato, animales, mascotas, adoptar, transito" />
+        <meta name="description" content="Encontra el refugio de animales mas cercano y comunicate para adoptar, donar o dar transito" />
+        <meta name="keywords" content="refugio, perro, gato, animales, mascotas, adoptar, transito, donar, apadrinar, castracion" />
         <meta name="author" content="Nancy Furyk">
         <link rel="shortcut icon" href="../assets/img/favicon.png" type="image/x-icon">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"  rel="stylesheet"integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
